# src_platform_clip-useradmin

./: AUTHORS  CHANGELOG  Makefile.am  Makefile.in  README.md  configure  configure.ac
init/: Makefile.am  Makefile.in  useradmin
man/: Makefile.am  Makefile.in  clip-useradmin.8
scripts/: Makefile.am  Makefile.in  create_user.sh  delete_user.sh  list_users.sh  lock_user.sh  modify_user.sh  unlock_user.sh  user_common.sh
src/: Makefile.am  Makefile.in  cryptpasswd.c  user.c  user.h  useradmin.c
